--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>DeamonDev webpage</title>
+</head>
+<body>
+    <p>Hello Cats!<p>
+</body>
+</html>
