--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html lang="en">
 <head>
     <title>DeamonDev webpage</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
     <p>Hello Cats!<p>
+
+    <div class="container">
+      <header class="main-header">
+        <h1>Piotr Rudnicki webpage</h1>
+
+        <nav>
+          <a href="#">Contact</a>
+          <a href="#">My kittens</a>"
+        </nav>
+
+      </header>
+    </div>
+
+
 </body>
 </html>
