--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <p>Hello Cats!<p>
 
     <div class="container">
       <header class="main-header">
-        <h1>Piotr Rudnicki webpage</h1>
+        <h1>&lambda;<center>Piotr Rudnicki webpage</center></h1>
 
         <nav>
-          <a href="#">Contact</a>
-          <a href="#">My kittens</a>"
+          <a href="#" class="nav-link">&ltcontact&gt</a>
+          <a href="#" class="nav-link">&ltkittens&gt</a>
+          <a href="#" class="nav-link">&ltwhoami&gt</a>
+          <a href="#" class="nav-link">&ltarticles&gt</a>
         </nav>
 
       </header>
