--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
           <a href="#" class="nav-link">&ltcontact&gt</a>
           <a href="#" class="nav-link">&ltkittens&gt</a>
-          <a href="#" class="nav-link">&ltwhoami&gt</a>
+          <a href="whoami/whoami.html" class="nav-link">&ltwhoami&gt</a>
           <a href="#" class="nav-link">&ltarticles&gt</a>
         </nav>
 
