--- a/contact/contact.html
+++ b/contact/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>DeamonDev webpage</title>
-    <link href="/articles/style.css" rel="stylesheet" />
+    <link href="/contact/style.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -11,12 +11,18 @@
         <h1>&lambda;<center>Piotr Rudnicki webpage</center></h1>
 
         <nav>
-          <a href="../contact/contact.html" class="nav-link">&ltcontact&gt</a>
+          <a href="#" class="nav-link">&ltcontact&gt</a>
           <a href="#" class="nav-link">&ltkittens&gt</a>
           <a href="../whoami/whoami.html" class="nav-link">&ltwhoami&gt</a>
-          <a href="#" class="nav-link">&ltarticles&gt</a>
+          <a href="../articles/articles.html" class="nav-link">&ltarticles&gt</a>
         </nav>
 
+      </header>
+    </div>
+
+    <div class="container">
+      <header class="contact">
+        <p>email: <a href="mailto:deamondev@gmail.com">deamondev@gmail.com</a></p>
       </header>
     </div>
 
