--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>&lambda;<center>Piotr Rudnicki webpage</center></h1>
 
         <nav>
-          <a href="#" class="nav-link">&ltcontact&gt</a>
+          <a href="contact/contact.html" class="nav-link">&ltcontact&gt</a>
           <a href="#" class="nav-link">&ltkittens&gt</a>
           <a href="whoami/whoami.html" class="nav-link">&ltwhoami&gt</a>
           <a href="articles/articles.html" class="nav-link">&ltarticles&gt</a>
