--- a/whoami/whoami.html
+++ b/whoami/whoami.html
@@ -13,7 +13,7 @@
         </h1>
 
         <nav>
-          <a href="#" class="nav-link">&ltcontact&gt</a>
+          <a href="../contact/contact.html" class="nav-link">&ltcontact&gt</a>
           <a href="#" class="nav-link">&ltkittens&gt</a>
           <a href="#" class="nav-link">&ltwhoami&gt</a>
           <a href="../articles/articles.html" class="nav-link"
@@ -25,7 +25,7 @@
 
     <div class="container">
       <header class="about-me">
-        <img src="../m3.jpg" width="300" height="350" />
+        <img src="../m3.jpg" width="325" height="350" />
         <p class="about-me-desc">
           Hello! Thank you for looking forward to my little webpage! I am
           graduate theoretical math major. Some time ago I interrupted my PhD
@@ -34,8 +34,8 @@
           programming. Currently I'm working at
           <a href="https://scalac.io/">Scalac</a> as (obviously) Scala devloper.
           Besides Scala I do some projects in Haskell. For many years I've been 
-          meditating and studied (no formally) Theravada Buddhism. Currently I'm 
-          interested in druidism. My plan is to post my thoughts from time to time 
+          meditating and studied (non formally) Theravada Buddhism. Currently I'm 
+          interested in Druidism. My plan is to post my thoughts from time to time 
           with a hope at least one person could gain from it some insight / knowledge.
           My text editor of choice is neovim.
         </p>
